# pyGinit

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.ini  gitignore-list.txt  inquirer.py  main.py  pyproject.toml  requirements.txt  setup.py  test.py  test_cli.py  test_outputFile.py
.github/workflows/: python-app.yml
pyGinit/: git.py  git.sh  gitCommand.py  gitignore-list.txt  gitignoreList.py  inquirer.py  main.py  repo.py
pyGinit/test/: test_cli.py  test_outputFile.py
src/: gitCommand.py  inquirer.py  main.py
